# doulos_engine

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: externals.cmake
src/editor/: CMakeLists.txt  main.cpp
src/editor/editor/: app_settings.cpp  app_settings.hpp  editor_ui.cpp  editor_ui.hpp
src/pnc_engine/: CMakeLists.txt  pnc_runner.cpp  pnc_runner.hpp  project.hpp
src/pnc_engine/actions/: action.hpp
src/pnc_engine/data/: object.hpp  variable.hpp
src/pnc_engine/inventory/: inventory.hpp
src/pnc_engine/sequences/: node.hpp  requirement.hpp
